<resources>

    <!--start url prefix-->
    <!--<string name="url_schema">doup</string>-->
    <!--<string name="url_middle">://</string>-->
    <!--end url prefix-->

    <!--stjpush_activity_mainmain module-->
    <string name="host_main">main</string>
    <string name="path_start">/startActivity</string>
    <!--jpush_activity_mainmain module-->

    <!--start jchat module-->
    <string name="host_im">jim</string>
    <!--end jchat module-->

    <!--start jpush module-->
    <string name="host_jpush">jpush</string>
    <string name="path_main">/mainActivity</string>
    <!--end jpush module-->

    <!--start 极光-->
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <!--end 极光-->

    <string name="app_name">豆皮</string>
    <string name="about_me">About Me</string>
    <string name="title_meizi">妹子</string>
    <string name="title_open_eye">开眼</string>
    <string name="recommend">推荐</string>
    <string name="popular">热门</string>
    <string name="findings">发现</string>
    <string name="back">back</string>
    <string name="title_index">首页</string>
    <string name="cache">缓存</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="favorite">收藏</string>
    <string name="title">标题</string>
    <string name="time">时间</string>
    <string name="video_desc">视频描述</string>
    <string name="weather">天气</string>
    <string name="nav_call">Call</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_location">Location</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_tasks">Tasks</string>
    <string name="my_name">Bin Lee</string>
    <string name="my_email">sleticalboy@gmail.com</string>
    <string name="no_data">豆皮：暂无数据</string>
    <!--天气-->
    <string name="choose_area">中国</string>
    <string name="forecast">预报</string>
    <string name="aqi">空气质量</string>
    <string name="aqi_power">AQI指数</string>
    <string name="pm2_5">PM2.5 指数</string>
    <string name="live_suggestion">生活建议</string>
    <string name="map_search_hint">搜地点、查公交、找路线</string>
    <string name="search_hint">搜索</string>
    <string name="title_activity_settings">Settings</string>

    <!--地图-->
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--behavior-->
    <string
        name="bottom_navigation_behavior"
        translatable="false">com.sleticalboy.widget.behavior.BottomNavigationBehavior</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your
        message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_as_test">AsTestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_message">消息</string>
</resources>
