<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
            android:id="@+id/gsy_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/img_blurred"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|bottom"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_video_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/title"/>

                <TextView
                    android:id="@+id/tv_video_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="@string/time"/>

                <TextView
                    android:id="@+id/tv_video_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="@string/video_desc"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_action_favorites_without_padding"
                    android:drawablePadding="4dp"
                    android:drawableStart="@mipmap/ic_action_favorites_without_padding"
                    android:textColor="@color/white"
                    tools:text="@string/favorite"/>

                <TextView
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:drawableLeft="@mipmap/ic_action_share_without_padding"
                    android:drawablePadding="4dp"
                    android:drawableStart="@mipmap/ic_action_share_without_padding"
                    android:textColor="@color/white"
                    tools:text="@string/share"/>

                <TextView
                    android:id="@+id/btn_reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:drawableLeft="@mipmap/ic_action_reply_nopadding"
                    android:drawablePadding="4dp"
                    android:drawableStart="@mipmap/ic_action_reply_nopadding"
                    android:text="@string/comment"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/btn_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:drawableLeft="@mipmap/action_download_cut"
                    android:drawablePadding="4dp"
                    android:drawableStart="@mipmap/action_download_cut"
                    android:text="@string/cache"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>